@@ -6,29 +6,26 @@ import java.io.IOException;
 import java.lang.module.ModuleDescriptor.Version;
 import java.net.URLDecoder;
 import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Map;
-import java.util.Random;
-import java.util.UUID;
+import java.util.*;
 import java.util.concurrent.Semaphore;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicLong;
 import java.util.function.Consumer;
 import java.util.stream.Stream;
 
 import org.luke.gui.controls.alert.Alert;
 import org.luke.gui.controls.alert.AlertType;
 import org.luke.gui.controls.alert.ButtonType;
+import org.luke.gui.exception.ErrorHandler;
 import org.luke.gui.file.FileUtils;
 import org.luke.gui.locale.Locale;
 import org.luke.gui.window.Window;
 import org.luke.jwin.app.console.Console;
-import org.luke.jwin.app.file.FileDealer;
-import org.luke.jwin.app.file.FileTypeAssociation;
-import org.luke.jwin.app.file.JWinProject;
-import org.luke.jwin.app.file.UrlProtocolAssociation;
+import org.luke.jwin.app.file.*;
 import org.luke.jwin.app.layout.JwinUi;
 import org.luke.jwin.app.param.JdkParam;
 import org.luke.jwin.local.LocalStore;
@@ -39,99 +36,112 @@ import javafx.stage.DirectoryChooser;
 public class JwinActions {
 	private static Window window;
 
-	private Random random = new Random();
+	private final Random random = new Random();
 
 	private File preBuild;
 
-	private Window ps;
-	static private JwinUi config;
+	private final Window ps;
 
-	private DirectoryChooser fc;
+	private final DirectoryChooser fc;
 
-	public JwinActions(Window ps, JwinUi config) {
+	public JwinActions(Window ps) {
 		this.ps = ps;
 		window = ps;
-		JwinActions.config = config;
 
 		fc = new DirectoryChooser();
 	}
 
-	private void preRun() {
-		List<File> cp = config.getClasspath().getFiles();
+	@SuppressWarnings("BooleanMethodIsAlwaysInverted")
+    private boolean preRun() {
+		JWinProject project = config().getProjectInUse();
+		List<File> cp = config().getClasspath().getFiles();
 
 		if (cp.isEmpty()) {
 			error("missing_cp_head", "missing_cp_body");
-			return;
+			return false;
 		}
 
-		if (config.getMainClass().getValue() == null) {
-			config.separate();
-			config.logStd("mc_auto_attempt");
-			Map<String, File> mcs = config.getMainClass().listMainClasses();
+		if (config().getMainClass().getValue() == null) {
+			config().separate();
+			config().logStd("mc_auto_attempt");
+			Map<String, File> mcs = config().getMainClass().listMainClasses();
 
 			if (mcs.size() == 1) {
 				Map.Entry<String, File> mc = mcs.entrySet().iterator().next();
-				config.logStd(Locale.key("mc_auto_set", "class", mc.getKey()));
-				config.getMainClass().set(mc);
+				config().logStd(Locale.key("mc_set", "class", mc.getKey()));
+				config().getMainClass().set(mc);
 			} else {
-				error("mc_required_head", "mc_required_body");
-				return;
+				if(mcs.size() > 1) {
+					config().logStd("multiple_mains");
+				}
+				Semaphore wait = new Semaphore(0);
+				AtomicBoolean selected = new AtomicBoolean(false);
+				error("mc_required_head", "mc_required_body", (r) -> {
+					if(r == ButtonType.SELECT_NOW) {
+						String n = config().getMainClass().showChooser();
+						if (n != null) {
+							config().logStd(Locale.key("mc_set", "class", n));
+							selected.set(true);
+						}
+					}
+					wait.release();
+				}, ButtonType.SELECT_NOW, ButtonType.CLOSE);
+				wait.acquireUninterruptibly();
+				if(!selected.get())
+					return false;
 			}
 		}
 
-		if (!config.getClasspath().isValidMainClass(config.getMainClass().getValue().getValue())) {
+		if (config().getClasspath().isInvalidMainClass(config().getMainClass().getValue().getValue())) {
 			error("mc_invalid_head", "mc_invalid_body");
-			return;
+			return false;
 		}
 
-		File dk = config.getJdk().getValue();
+		File dk = config().getJdk().getValue();
 
 		if (dk == null) {
-			config.separate();
-			config.logStd("jdk was not set");
+			config().separate();
+			config().logStd("missing_jdk_head");
 
 			File defJdk = new File(LocalStore.getDefaultJdk());
 			if (defJdk.exists()) {
 				Semaphore s = new Semaphore(0);
-				config.getJdk().set(defJdk, "", () -> {
-					config.logStd("using default jdk : " + config.getJdk().getVersion());
+				config().getJdk().set(defJdk, "", () -> {
+					config().logStd(Locale.key("using_default_jdk", "version", config().getJdk().getVersion()));
 					s.release();
 				});
 				s.acquireUninterruptibly();
 			} else {
 				List<File> fs = JdkParam.detectJdkCache();
 				if (!fs.isEmpty()) {
-					File f = fs.get(0);
+					File f = fs.getFirst();
 					Semaphore s = new Semaphore(0);
-					config.getJdk().set(f, " (found in your system)", () -> {
-						config.logStd("jdk " + config.getJdk().getVersion() + " was detected, using that...");
-						s.release();
-					});
+					config().getJdk().set(f, " (found in your system)", s::release);
 					s.acquireUninterruptibly();
 				} else {
-					error("Missing Jdk", "You didn't select the jdk to compile your application");
-					return;
+					error("missing_jdk_head", "missing_jdk_body");
+					return false;
 				}
 			}
-			config.separate();
+			config().separate();
 		}
 
-		if (!config.getJdk().isJdk()) {
-			error("Invalid Jdk",
-					"The jdk directory you selected is unsupported and can not be used to compile your app");
-			return;
+		if (!config().getJdk().isJdk()) {
+			error("missing_jdk_head",
+					"missing_jdk_body");
+			return false;
 		}
 
-		File rt = config.getJre().getValue();
+		File rt = config().getJre().getValue();
 
 		if (rt == null) {
-			config.separate();
-			config.logStd("no_jre_using_jdk");
-			config.logStd("jdk_consider_1");
-			config.logStd("jdk_consider_2");
-			config.separate();
+			config().separate();
+			config().logStd("no_jre_using_jdk");
+			config().logStd("jdk_consider_1");
+			config().logStd("jdk_consider_2");
+			config().separate();
 
-			List<File> jars = config.getDependencies().getJars();
+			List<File> jars = config().getDependencies().getJars();
 			boolean rereso = jars.isEmpty();
 			for (File jar : jars) {
 				if (!jar.exists()) {
@@ -142,87 +152,138 @@ public class JwinActions {
 
 			if (rereso) {
 				Semaphore s = new Semaphore(0);
-				config.getDependencies().resolve(config.getClasspath().getRoot(), (r) -> {
-					s.release();
-				});
+				config().getDependencies().resolve(config().getClasspath().getRoot(), (_) -> s.release());
 				s.acquireUninterruptibly();
 			}
 
 			Semaphore s = new Semaphore(0);
-			config.getJre().set(config.getJdk().getValue(), () -> {
-				s.release();
-			});
+			config().getJre().setFile(config().getJdk().getValue(), s::release);
 			s.acquireUninterruptibly();
 
-			rt = config.getJre().getValue();
+			rt = config().getJre().getValue();
 			if (rt == null) {
-				error("Missing Jre", "You didn't select the jre to run your application");
-				return;
+				error("missing_jre_head", "missing_jre_body");
+				return false;
 			}
 		}
 
-		String jreVersionString = config.getJre().getVersion().split("_")[0];
-		String jdkVersionString = config.getJdk().getVersion().split("_")[0];
+		String jreVersionString = config().getJre().getVersion().split("_")[0];
+		String jdkVersionString = config().getJdk().getVersion().split("_")[0];
 
 		Version jreVersion = Version.parse(jreVersionString);
 		Version jdkVersion = Version.parse(jdkVersionString);
 
 		int versionCompare = jreVersion.compareTo(jdkVersion);
 		if (versionCompare < 0) {
-			error("Uncompatible Java versions",
-					"Your JRE " + jreVersion + " will not be able to run code compiled by Your JDK " + jdkVersion);
-			return;
+			error("jdk_jre_head", Locale.key("jdk_jre_body",
+					"jre_version", jreVersion.toString(),
+					"jdk_version", jdkVersion.toString()));
+			return false;
 		}
 
-		if (config.getDependencies().isResolving()) {
-			warn("Resolving dependencies", "try again after dependencies are successfully resolved");
-			return;
+		if (config().getDependencies().isResolving()) {
+			warn("resolving_dependencies", "");
+			return false;
 		}
 
-		if (config.getProjectInUse().isConsole() == null && config.getClasspath().isConsoleApp()) {
-			config.logStd("it was estimated that your project is a console app, setting that...");
-			config.getConsole().checkedProperty().set(true);
+		if (config().getConsole().isUnset() &&
+				config().getClasspath().isConsoleApp()) {
+			config().logStd("console_estimated");
+			config().getConsole().set(true);
 		}
 
-		config.disable(true, false);
+		config().disable(true, false);
 
 		preBuild = new File(System.getProperty("java.io.tmpdir") + "/jwin_pre_build_" + random.nextInt(999999));
 		preBuild.mkdir();
 
-		config.setState("copying_dependencies");
-		File preBuildLibs = null;
+		config().setState("copying_dependencies");
+		File preBuildLibs;
 		try {
-			preBuildLibs = config.getDependencies().copy(preBuild, config::setProgress);
+			preBuildLibs = config().getDependencies().copy(preBuild, config()::setProgress);
 		} catch (IOException e2) {
 			copyDependenciesFailure();
-			config.onErr();
-			return;
+			config().onErr();
+			return false;
 		}
 
-		config.setState("copying_runtime");
-		config.getJre().copy(preBuild, config::setProgress);
+		config().setState("copying_runtime");
+		config().getJre().copy(preBuild, config()::setProgress);
 
-		config.setState("compiling_source_code");
+		config().setState("compiling_source_code");
 		try {
-			config.getClasspath().compile(preBuild, preBuildLibs, config.getJdk().getValue(),
-					config.getMainClass().getValue(), config::incrementProgress, config.getMainClass()::setAltMain);
+			config().getClasspath().compile(preBuild, preBuildLibs, config().getJdk().getValue(),
+					config().getMainClass().getValue(), config()::incrementProgress, config().getMainClass()::setAltMain);
 		} catch (IllegalStateException x) {
 			compileFailure();
-			config.onErr();
-			return;
+			config().onErr();
+			return false;
+		}
+		List<RootFileScanner.DetectedFile> detectedFiles = null;
+        try {
+            detectedFiles = RootFileScanner.scanRoot(config().getClasspath().getRoot());
+        } catch (IOException e) {
+            ErrorHandler.handle(e, "detect important files from root folder");
+        }
+
+		if(detectedFiles != null && !detectedFiles.isEmpty()) {
+			List<File> files = config().getRootFiles().getFiles();
+			List<File> exclude = config().getRootFiles().getExclude();
+			boolean found = false;
+			for(RootFileScanner.DetectedFile df: detectedFiles) {
+				if(!exclude.contains(df.file()) && !files.contains(df.file())) {
+					found = true;
+					break;
+				}
+			}
+
+			if(found) {
+				Semaphore wait = new Semaphore(0);
+				List<RootFileScanner.DetectedFile> fdfs = detectedFiles;
+				Platform.runLater(() -> config().getRootFiles().showOverlay(fdfs, wait::release));
+				wait.acquireUninterruptibly();
+			}
+
+			for(File toInclude : config().getRootFiles().getFiles()) {
+                try {
+                    Files.copy(toInclude.toPath(), new File(preBuild, toInclude.getName()).toPath());
+                } catch (IOException e) {
+                    ErrorHandler.handle(e, "copy file " + toInclude.getName());
+                }
+            }
 		}
 
-		config.setState("copying_resources");
-		config.getClasspath().copyRes(preBuild, config::setProgress);
+		if(project != config().getProjectInUse()) {
+			return false;
+		}
+
+		if(detectedFiles != null && !detectedFiles.isEmpty()) {
+			List<File> files = config().getRootFiles().getFiles();
+			List<File> exclude = config().getRootFiles().getExclude();
+			for (RootFileScanner.DetectedFile df : detectedFiles) {
+				if (!exclude.contains(df.file()) && !files.contains(df.file())) {
+					exclude.add(df.file());
+					config().logStd(Locale.key("default_excluded", "file", df.file().getName()));
+				}
+			}
+		}
+
+        config().setState("copying_resources");
+		config().getClasspath().copyRes(preBuild, config()::setProgress);
+		return project == config().getProjectInUse();
 	}
 
 	public void run() {
 		new Thread(() -> {
-			preRun();
+			if(!preRun()) {
+				config().setProgress(-1);
+				config().setState("idle");
+				return;
+			}
 
-			config.setProgress(-1);
-			config.logStd("running_proj");
-			config.setState("running");
+			config().setProgress(-1);
+			config().logStd("running_proj");
+			config().setState("running");
 
 			StringBuilder errBuilder = new StringBuilder();
 
@@ -232,31 +293,34 @@ public class JwinActions {
 					FileUtils.write(f, errBuilder.toString());
 					Desktop.getDesktop().open(f);
 				} catch (IOException e) {
-					e.printStackTrace();
+					ErrorHandler.handle(e, "open logs file");
 				}
 			};
 
 			String c = "\"rt/bin/java\" -cp \"bin;res;lib/*\" "
-					+ (config.getMainClass().getAltMain() == null ? config.getMainClass().getValue().getKey()
-							: config.getMainClass().getAltMain());
-			Command command = new Command(std -> {
-			}, err -> errBuilder.append(err).append('\n'), "cmd", "/c", c);
+					+ (config().getMainClass().getAltMain() == null ? config().getMainClass().getValue().getKey()
+							: config().getMainClass().getAltMain());
+			Command command = new Command(_ -> {
+			}, err -> {
+				if(err.endsWith("com.sun.javafx.application.PlatformImpl startup")) return;
+				if(err.startsWith("WARNING: Unsupported JavaFX configuration: classes were loaded from 'unnamed module")) return;
+				errBuilder.append(err).append('\n');
+			}, "cmd", "/c", c);
 
 			Process p = command.execute(preBuild);
 
-			if (config.getConsole().checkedProperty().get()) {
+			if (config().getConsole().get()) {
 				Platform.runLater(() -> {
 					Console con = new Console(window.getLoadedPage(), command);
 					con.show();
 
-					Runnable end = () -> config.stop(p);
+					Runnable end = () -> config().stop(p);
 
-					command.addOnExit(ec -> {
-						Platform.runLater(() -> {
-							con.exited(ec);
-							con.setOnStop(null);
-						});
-					});
+					command.addOnExit(ec ->
+							Platform.runLater(() -> {
+                        		con.exited(ec);
+                        		con.setOnStop(null);
+							}));
 
 					con.setOnStop(end);
 
@@ -265,43 +329,38 @@ public class JwinActions {
 				});
 			}
 
-			config.logStd("proj_running");
+			config().logStd("proj_running");
 
-			config.run(p, showLog, errBuilder);
+			config().run(p, showLog, errBuilder);
 		}).start();
 	}
 
 	public void compile() {
 		boolean[] contin = new boolean[] { true };
 
-		if (preBuild == null) {
-			error("Temp files can't be found",
-					"Pre Build files were deleted or not correctly generated, try running again");
+		if (config().getIcon().getValue() == null || !config().getIcon().getValue().exists()) {
+			config().getIcon().set(new File(
+					URLDecoder.decode(Objects.requireNonNull(getClass().getResource("/def.ico")).getFile(),
+							Charset.defaultCharset())));
+		}
+
+		if (config().getAppName().getValue().isBlank()) {
+			error("app_name_head", "app_name_body");
 			return;
 		}
 
-		if (config.getIcon().getValue() == null || !config.getIcon().getValue().exists()) {
-			config.getIcon().set(new File(
-					URLDecoder.decode(getClass().getResource("/def.ico").getFile(), Charset.defaultCharset())));
+		if (config().getVersion().getValue().isBlank()) {
+			config().getVersion().setValue("0.0.1");
 		}
 
-		if (config.getAppName().getValue().isBlank()) {
-			error("Missing app name", "The application name field is required");
-			return;
-		}
-
-		if (config.getVersion().getValue().isBlank()) {
-			config.getVersion().setValue("0.0.1");
-		}
-
-		if (config.getGuid().getValue() == null || config.getGuid().getValue().isBlank()) {
+		if (config().getGuid().getValue() == null || config().getGuid().getValue().isBlank()) {
 			String guid = UUID.randomUUID().toString();
-			config.logStd(Locale.key("guid_generated", "guid", guid));
-			config.getGuid().setValue(guid);
+			config().logStd(Locale.key("guid_generated", "guid", guid));
+			config().getGuid().setValue(guid);
 		}
 
 		// Check for warnings
-		if (config.getJre().isJdk()) {
+		if (config().getJre().isJdk()) {
 			boolean[] cont = new boolean[] { true };
 			alert("using_jdk_as_runtime", "not_recommended_warning", AlertType.ERROR, res -> {
 				if (res != ButtonType.YES) {
@@ -312,18 +371,18 @@ public class JwinActions {
 				return;
 		}
 
-		if (config.getFileInUse() == null) {
+		if (config().getFileInUse() == null) {
 			alert("save_before_building", "save_project_recommendation", AlertType.CONFIRM, res -> {
 				if (res.equals(ButtonType.YES)) {
-					if (config.saveAs())
-						config.logStd("project_saved");
+					if (config().saveAs())
+						config().logStd("project_saved");
 				} else if (res.equals(ButtonType.CANCEL)) {
 					contin[0] = false;
 				}
 			});
 		} else {
-			JWinProject exported = config.export();
-			List<String> diffs = exported.compare(config.getProjectInUse());
+			JWinProject exported = config().export();
+			List<String> diffs = exported.compare(config().getProjectInUse());
 
 			if (!diffs.isEmpty()) {
 				StringBuilder diffStr = new StringBuilder();
@@ -332,9 +391,9 @@ public class JwinActions {
 				alert("save_changes_head", Locale.key("save_changes_body", "diffStr", diffStr.toString().trim()),
 						AlertType.CONFIRM, res -> {
 							if (res.equals(ButtonType.YES)) {
-								FileDealer.write(exported.serialize(), config.getFileInUse());
-								config.setProjectInUse(exported);
-								config.logStd("changes saved.");
+								FileDealer.write(exported.serialize(), config().getFileInUse());
+								config().setProjectInUse(exported);
+								config().logStd("changes_saved");
 							} else if (res.equals(ButtonType.CANCEL)) {
 								contin[0] = false;
 							}
@@ -346,7 +405,7 @@ public class JwinActions {
 			return;
 		}
 
-		File preSaveTo = config.getFileInUse() == null ? null : config.getFileInUse().getParentFile();
+		File preSaveTo = config().getFileInUse() == null ? null : config().getFileInUse().getParentFile();
 		if (preSaveTo == null) {
 			contin[0] = false;
 			alert("select_output_directory", "select_directory_description", AlertType.INFO, res -> {
@@ -363,37 +422,41 @@ public class JwinActions {
 		final File saveTo = preSaveTo;
 
 		if (saveTo != null) {
-			config.disable(true, true);
+			config().disable(true, true);
 			new Thread(() -> {
-				preRun();
+				if(!preRun()) {
+					config().setProgress(-1);
+					config().setState("idle");
+					return;
+				}
 
-				config.setState("Generating launcher");
+				config().setState("generating_launcher");
 
 				File preBuildBat = new File(
-						preBuild.getAbsolutePath().concat("/").concat(config.getAppName().getValue()).concat(".bat"));
+						preBuild.getAbsolutePath().concat("/").concat(config().getAppName().getValue()).concat(".bat"));
 
 				FileDealer.write(
 						"set batdir=%~dp0 \n" + "pushd \"%batdir%\" \ncls\n" + "\"rt/bin/java\" -cp \"res;bin;lib/*\" "
-								+ (config.getMainClass().getAltMain() == null
-										? config.getMainClass().getValue().getKey()
-										: config.getMainClass().getAltMain())
+								+ (config().getMainClass().getAltMain() == null
+										? config().getMainClass().getValue().getKey()
+										: config().getMainClass().getAltMain())
 								+ " %*",
 						preBuildBat);
 
 				File b2e = new File(
-						URLDecoder.decode(getClass().getResource("/b2e.exe").getFile(), Charset.defaultCharset()));
+						URLDecoder.decode(Objects.requireNonNull(getClass().getResource("/b2e.exe")).getFile(), Charset.defaultCharset()));
 
 				String convertCommand = "b2e /bat \"" + preBuildBat.getAbsolutePath() + "\" /exe \""
 						+ preBuildBat.getAbsolutePath().replace(".bat", ".exe") + "\"";
 
-				if (!config.getConsole().checkedProperty().get()) {
+				if (!config().getConsole().get()) {
 					convertCommand += " /invisible";
 				}
-				if (config.getAdmin().checkedProperty().get()) {
+				if (config().getAdmin().get()) {
 					convertCommand += " /uac-admin";
 				}
-				if (config.getIcon().getValue() != null) {
-					convertCommand += " /icon \"" + config.getIcon().getValue().getAbsolutePath() + "\"";
+				if (config().getIcon().getValue() != null) {
+					convertCommand += " /icon \"" + config().getIcon().getValue().getAbsolutePath() + "\"";
 				}
 
 				Command convert = new Command("cmd.exe", "/C", convertCommand);
@@ -401,30 +464,30 @@ public class JwinActions {
 				try {
 					convert.execute(b2e.getParentFile()).waitFor();
 				} catch (InterruptedException e1) {
-					e1.printStackTrace();
+					ErrorHandler.handle(e1, "convert bat to exe");
 					Thread.currentThread().interrupt();
 				}
 
 				try {
 					Files.delete(preBuildBat.toPath());
 				} catch (IOException e2) {
-					e2.printStackTrace();
+					ErrorHandler.handle(e2, "delete launcher file");
 				}
 
-				config.setState("Generating installer");
-				String template = FileDealer.read("/ist.txt").replace(key("app_name"), config.getAppName().getValue())
-						.replace(key("app_version"), config.getVersion().getValue())
-						.replace(key("app_publisher"), config.getPublisher().getValue())
+				config().setState("generating_installer");
+				String template = FileDealer.read("/ist.txt").replace(key("app_name"), config().getAppName().getValue())
+						.replace(key("app_version"), config().getVersion().getValue())
+						.replace(key("app_publisher"), config().getPublisher().getValue())
 						.replace(key("output_folder"), saveTo.getAbsolutePath())
 						.replace(key("installer_name"),
-								config.getAppName().getValue().concat("_")
-										.concat(config.getVersion().getValue().replace(".", "-")).concat("_installer"))
-						.replace(key("app_icon"), config.getIcon().getValue().getAbsolutePath())
+								config().getAppName().getValue().concat("_")
+										.concat(config().getVersion().getValue().replace(".", "-")).concat("_installer"))
+						.replace(key("app_icon"), config().getIcon().getValue().getAbsolutePath())
 						.replace(key("prebuild_path"), preBuild.getAbsolutePath())
-						.replace(key("GUID"), config.getGuid().getValue());
+						.replace(key("GUID"), config().getGuid().getValue());
 
-				FileTypeAssociation fta = config.getMoreSettings().getFileTypeAssociation();
-				UrlProtocolAssociation upa = config.getMoreSettings().getUrlProtocolAssociation();
+				FileTypeAssociation fta = config().getMoreSettings().getFileTypeAssociation();
+				UrlProtocolAssociation upa = config().getMoreSettings().getUrlProtocolAssociation();
 
 				if (fta == null && upa == null) {
 					template = template.replace(key("add_to_file"), "");
@@ -437,7 +500,7 @@ public class JwinActions {
 										new File(preBuild.getAbsolutePath().concat("/").concat(fta.getIcon().getName()))
 												.toPath());
 							} catch (IOException e1) {
-								e1.printStackTrace();
+								ErrorHandler.handle(e1, "copy icon");
 							}
 						}
 
@@ -449,7 +512,7 @@ public class JwinActions {
 
 						String typeReg = FileDealer.read("/type_reg.txt")
 								.replace(key("type_extension"), fta.getTypeExtension()).replace(key("type_icon"),
-										fta.getIcon() == null ? config.getAppName().getValue().concat(".exe")
+										fta.getIcon() == null ? config().getAppName().getValue().concat(".exe")
 												: fta.getIcon().getName());
 
 						reg.append(typeReg).append("\n");
@@ -473,14 +536,35 @@ public class JwinActions {
 				FileDealer.write(template, buildScript);
 
 				File ise = new File(
-						URLDecoder.decode(getClass().getResource("/is/ISCC.exe").getFile(), Charset.defaultCharset()));
+						URLDecoder.decode(Objects.requireNonNull(getClass().getResource("/is/ISCC.exe")).getFile(),
+								Charset.defaultCharset()));
+
+				//set process icon and description
+				try {
+					File javaBin = new File(preBuild, "\\rt\\bin");
+					File java = new File(javaBin, "\\java.exe");
+					File javaw = new File(javaBin, "\\javaw.exe");
+					File javadll = new File(javaBin, "\\java.dll");
+
+					setFileDescription(java);
+					setFileDescription(javaw);
+					setFileDescription(javadll);
+
+					setFileIcon(java, config().getIcon().getValue());
+					setFileIcon(javaw, config().getIcon().getValue());
+
+					new Command("cmd.exe", "/C","ie4uinit.exe -ClearIconCache").execute(preBuild).waitFor();
+					new Command("cmd.exe", "/C","ie4uinit.exe -show").execute(preBuild).waitFor();
+				}catch(Exception e) {
+					ErrorHandler.handle(e, "set process description & icon");
+				}
 
 				int fileCount = countDir(preBuild);
 				int[] compressCount = new int[] { 0 };
 				Consumer<String> buildLine = line -> {
 					if (line.trim().indexOf("Compressing") == 0) {
 						compressCount[0]++;
-						config.setProgress((compressCount[0] / (double) fileCount) * .9);
+						config().setProgress((compressCount[0] / (double) fileCount) * .9);
 					}
 				};
 				Command build = new Command(buildLine, buildLine, "cmd.exe", "/C",
@@ -489,29 +573,86 @@ public class JwinActions {
 				try {
 					build.execute(ise.getParentFile()).waitFor();
 				} catch (InterruptedException e1) {
-					e1.printStackTrace();
+					ErrorHandler.handle(e1, "generate installer");
 					Thread.currentThread().interrupt();
 				}
 
 				try {
 					Desktop.getDesktop().open(saveTo);
 				} catch (IOException e1) {
-					e1.printStackTrace();
+					ErrorHandler.handle(e1, "open installer folder");
 				}
 
 				Platform.runLater(() -> {
-					config.setState("done");
-					config.setProgress(-1);
-					config.disable(false, true);
+					config().setState("done");
+					config().setProgress(-1);
+					config().disable(false, true);
 				});
 			}).start();
 		}
 	}
 
+	public static JwinUi config() {
+		return Jwin.instance.getConfig();
+	}
+
+	private static void setFileIcon(File file, File icon) throws InterruptedException {
+		Command extractVersionInfo = new Command("cmd.exe", "/C","ResourceHacker.exe " +
+				"-open \"" + file.getAbsolutePath() + "\" " +
+				"-save \"" + file.getAbsolutePath() + "\" " +
+				"-action addoverwrite " +
+				"-res \"" + icon.getAbsolutePath() + "\" " +
+				"-mask ICONGROUP,MAINICON,\n");
+		extractVersionInfo.execute(Jwin.getResourceHacker()).waitFor();
+	}
+
+	private static void setFileDescription(File file) throws IOException, InterruptedException {
+		File tempVersionInfo = File.createTempFile("jwin_version_info_", ".rc");
+		Command extractVersionInfo = new Command("cmd.exe", "/C",
+				"ResourceHacker.exe " +
+						"-open \"" + file.getAbsolutePath() + "\" " +
+						"-save \"" + tempVersionInfo.getAbsolutePath() + "\" " +
+						"-action extract " +
+						"-mask VERSIONINFO,1,");
+
+		extractVersionInfo.execute(Jwin.getResourceHacker()).waitFor();
+
+		String content = FileDealer.read(tempVersionInfo, StandardCharsets.UTF_16);
+        assert content != null;
+		String fileDescription = content.split("FileDescription")[1].split("VALUE")[0]
+				.replace("\"","")
+				.replace(",", "")
+				.trim();
+		String productName = content.split("ProductName")[1].split("VALUE")[0]
+				.replace("\"","")
+				.replace(",", "")
+				.trim();
+        String modifiedContent = content.replace(fileDescription, config().getAppName().getValue())
+				.replace(productName, config().getAppName().getValue()+ " " + config().getVersion().getValue());
+
+		FileDealer.write(modifiedContent, tempVersionInfo, StandardCharsets.UTF_16);
+
+		File compiledVersionInfo = File.createTempFile("jwin_version_info_", ".res");
+		Command compileVersionInfo = new Command("cmd.exe", "/C", "ResourceHacker.exe " +
+				"-open \"" + tempVersionInfo.getAbsolutePath() + "\" " +
+				"-save \"" + compiledVersionInfo.getAbsolutePath() + "\" " +
+				"-action compile");
+
+		compileVersionInfo.execute(Jwin.getResourceHacker()).waitFor();
+
+		Command setVersionInfo = new Command("cmd.exe", "/C", "ResourceHacker.exe " +
+				"-open \"" + file.getAbsolutePath() + "\" " +
+				"-save \"" + file.getAbsolutePath() + "\" " +
+				"-action addoverwrite -res \"" + compiledVersionInfo.getAbsolutePath() + "\" " +
+				"-mask VERSIONINFO,1,");
+
+		setVersionInfo.execute(Jwin.getResourceHacker()).waitFor();
+	}
+
 	public static int countDir(File dir) {
 		int count = 0;
 
-		for (File f : dir.listFiles()) {
+		for (File f : Objects.requireNonNull(dir.listFiles())) {
 			if (f.isDirectory()) {
 				count += countDir(f);
 			} else {
@@ -536,14 +677,26 @@ public class JwinActions {
 
 	public static void warn(String head, String content) {
 		alert(head, content, AlertType.INFO);
-		config.logErr(head);
-		config.logErr("\t" + content);
+		config().logErr(head);
+		config().logErr(content);
 	}
 
 	public static void error(String head, String content) {
-		alert(head, content, AlertType.ERROR);
-		config.logErr(head);
-		config.logErr("\t" + content);
+		error(head, content, null, (Runnable) null);
+	}
+
+	public static void error(String head, String content, Runnable onHide, ButtonType... types) {
+		error(head, content, null, onHide, types);
+	}
+
+	public static void error(String head, String content, Consumer<ButtonType> onRes, ButtonType... types) {
+		error(head, content, onRes, null, types);
+	}
+
+	public static void error(String head, String content, Consumer<ButtonType> onRes, Runnable onHide, ButtonType... types) {
+		alert(head, content, AlertType.ERROR, onRes, onHide, types);
+		config().logErr(head);
+		config().logErr(content);
 	}
 
 	public static void alert(String head, String content, AlertType type) {
@@ -589,19 +742,26 @@ public class JwinActions {
 		alert(head, content, type, onRes, null, types);
 	}
 
-	public static void deleteDir(File dir) {
+	public static long deleteDir(File dir) {
+		AtomicLong size = new AtomicLong(0);
 		try (Stream<Path> stream = Files.walk(dir.toPath())) {
-			stream.sorted(Comparator.reverseOrder()).map(Path::toFile).forEach(File::delete);
+			stream.sorted(Comparator.reverseOrder()).map(Path::toFile).forEach(file -> {
+				long l = file.length();
+				if(file.delete()) {
+					size.addAndGet(l);
+				}
+			});
 		} catch (IOException e1) {
-			e1.printStackTrace();
+			ErrorHandler.handle(e1, "delete dir " + dir.getName());
 		}
+		return size.get();
 	}
 
 	public static void copyDirCont(File src, File dest, Runnable onItemCopied) {
 		if (!dest.exists()) {
 			dest.mkdir();
 		}
-		for (File file : src.listFiles()) {
+		for (File file : Objects.requireNonNull(src.listFiles())) {
 			Path relative = src.toPath().relativize(file.toPath());
 			File target = Paths.get(dest.getAbsolutePath(), relative.toString()).toFile();
 
@@ -615,7 +775,8 @@ public class JwinActions {
 						onItemCopied.run();
 					}
 				} catch (IOException e) {
-					e.printStackTrace();
+					ErrorHandler.handle(e, "copyDirCont from " + src.getAbsolutePath() +
+							" to " + dest.getAbsolutePath());
 				}
 			}
 		}
